--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8" />
-  <title>DAZN project</title>
+  <title>DAZN project - Lorenzo Cinque</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+
 <body>
   <div id="root"></div>
   <script src="../dist/bundle.js"></script>
 </body>
+
 </html>
