--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>DAZN project - Lorenzo Cinque</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="//fonts.googleapis.com/css?family=Open+Sans"
+    />
+    <style>
+      *,
+      html {
+        box-sizing: border-box;
+      }
 
-<head>
-  <meta charset="UTF-8" />
-  <title>DAZN project - Lorenzo Cinque</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
+      *,
+      *:before,
+      *:after {
+        box-sizing: inherit;
+      }
+    </style>
+  </head>
 
-<body>
-  <div id="root"></div>
-</body>
-
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
